refined vehicle tax journey bugs

--- a/app/views/driving-pages/direct-debit-payment-monthly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-monthly-1.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 	<div class="back">
-		<a href="apply-pay-amount" class="link-back">Back</a>
+		<a href="renew-car-tax-choose-period" class="link-back">Back</a>
 	</div>
 
 <div class="grid-row">
@@ -99,15 +99,15 @@
 				<h2>Payment summary</h2>
 			      <p class="payment-info">Vehicle Tax – paid monthly</p>
 			       <h3>Amount:</h3>
-			       <p class="payment-amount"> £25.00 <span class="font-xsmall">per month</span></p>
+			       <p class="payment-amount"> £17.00 <span class="font-xsmall">per month</span></p>
 
 
-			<details>
+			<!-- <details>
 			 <summary><span class="summary font-xsmall">When will payments be taken</span></summary>
 				  <div class="panel panel-border-narrow">
 				    <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. All other payments will be taken on the first day of each month a payment is due.</p>
 				  </div>
-				</details>
+				</details> -->
 			</div>
 	</div>
 </div>
