--- a/app/views/driving-pages/renew-car-tax-check.html
+++ b/app/views/driving-pages/renew-car-tax-check.html
@@ -8,7 +8,7 @@ GOV.UK prototype kit
 
 <main id="content" role="main">
 <div class="back">
-		<a href="javascript:history.back()" class="link-back">Back</a>
+		<a href="renew-car-tax-v11" class="link-back">Back</a>
 	</div>
 
 	<h1 class="heading-large">Check vehicle details</h1>
@@ -25,6 +25,10 @@ GOV.UK prototype kit
 			      <tr>
 			        <td>Vehicle make:</td>
 			        <td class="table-info">FORD</td>
+			      </tr>
+			      <tr>
+			        <td>Amount to pay:</td>
+			        <td class="table-info">£204.00 per year</td>
 			      </tr>
 			      <tr>
 			       <td>Tax status:</td>
