--- a/app/views/driving-pages/renew-car-tax-choose-payment.html
+++ b/app/views/driving-pages/renew-car-tax-choose-payment.html
@@ -9,7 +9,7 @@ GOV.UK prototype kit
 
 <main id="content" role="main">
 	<div class="back">
-		<a href="javascript:history.back()" class="link-back">Back</a>
+		<a href="renew-car-tax-check" class="link-back">Back</a>
 	</div>
 
 <div class="grid-row">
@@ -28,12 +28,12 @@ GOV.UK prototype kit
 
                <div class="multiple-choice">
 		        <input id="renew-car-tax-choose-period" type="radio" name="radiogroup" value="renew-car-tax-choose-period">
-		        <label for="renew-car-tax-choose-period" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment plans such as monthly or yearly</span></label>
+		        <label for="renew-car-tax-choose-period" class="heading-small">Direct Debit <span class="form-hint">Choose between different recurring payment plans such as monthly or yearly</span></label>
 		      </div>
 
               <div class="multiple-choice">
 		        <input id="renew-car-tax-card-summary" type="radio" name="radiogroup" value="renew-car-tax-card-summary">
-		        <label for="renew-car-tax-card-summary" class="heading-small">Credit or Debit card <span class="form-hint">Pay a one-off fee for the whole year</span></label>
+		        <label for="renew-car-tax-card-summary" class="heading-small">Credit or debit card <span class="form-hint">Pay a one-off fee for the whole year</span></label>
 		      </div>
        
             </fieldset>
