--- a/app/views/driving-pages/renew-car-tax-choose-period.html
+++ b/app/views/driving-pages/renew-car-tax-choose-period.html
@@ -9,7 +9,7 @@ GOV.UK prototype kit
 
 <main id="content" role="main">
 	<div class="back">
-		<a href="javascript:history.back()" class="link-back">Back</a>
+		<a href="renew-car-tax-choose-payment" class="link-back">Back</a>
 	</div>
 
 <div class="grid-row">
@@ -26,17 +26,17 @@ GOV.UK prototype kit
 
               <div class="multiple-choice">
 		        <input id="direct-debit-payment-monthly-1" type="radio" name="radiogroup" value="direct-debit-payment-monthly-1">
-		        <label for="direct-debit-payment-monthly-1" class="heading-small">£25.00 — paid monthly <span class="form-hint">This adds up to a total fee of £300.00 every year</span></label>
+		        <label for="direct-debit-payment-monthly-1" class="heading-small">£17.00 — paid monthly <span class="form-hint">This adds up to a total fee of £204.00 every year</span></label>
 		      </div>
 
 		      <div class="multiple-choice">
 		        <input id="direct-debit-payment-6monthly-1" type="radio" name="radiogroup" value="direct-debit-payment-6monthly-1">
-		        <label for="direct-debit-payment-6monthly-1" class="heading-small">£150.00 — paid every 6 months <span class="form-hint">This adds up to a total fee of £300.00 every year</span></label>
+		        <label for="direct-debit-payment-6monthly-1" class="heading-small">£102.00 — paid every 6 months <span class="form-hint">This adds up to a total fee of £204.00 every year</span></label>
 		      </div>
 
                <div class="multiple-choice">
 		        <input id="direct-debit-payment-yearly-1" type="radio" name="radiogroup" value="direct-debit-payment-yearly-1">
-		        <label for="direct-debit-payment-yearly-1" class="heading-small">£300.00 — paid yearly</label>
+		        <label for="direct-debit-payment-yearly-1" class="heading-small">£204.00 — paid yearly</label>
 		      </div>
        
             </fieldset>
