--- a/app/views/driving-pages/direct-debit-payment-6monthly-2.html
+++ b/app/views/driving-pages/direct-debit-payment-6monthly-2.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 <div class="back">
-		<a href="direct-debit-payment-1" class="link-back">Back</a>
+		<a href="direct-debit-payment-6monthly-1" class="link-back">Back</a>
 	</div>
 
 
@@ -27,7 +27,7 @@
 		      </tr>
 		      <tr>
 		       <td>Sort code:</td>
-		        <td class="table-info">400500</td>
+		        <td class="table-info">40 05 00</td>
 		      </tr>
 		      <tr>
 		        <td>Account number:</td>
@@ -37,23 +37,31 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘Thames-Fishing-Permit’</span> will appear on your bank statement</p>
+				<p><span class="bold-small">‘MRN147836’</span> will appear on your bank statement</p>
 		</div>
 
 			<div class="form-group">
-			 			<a href="direct-debit-confirmed"><button class="button">Confirm payment</button></a>
+			 			<a href="direct-debit-confirmed-6monthly"><button class="button">Confirm payment</button></a>
 			 </div>
 			 <div class="back">
-					<a href="apply-start">Cancel payment</a>
+					<a href="renew-car-tax-choose-payment">Cancel payment</a>
 			</div>
 	</div>
 
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Lock and Weir Fishing Permit – River Thames</p>
-			      <h3>Total amount:</h3>
-			      <p class="payment-amount"> £31.00</p>
+			      <p class="payment-info">Vehicle Tax – paid every 6 months</p>
+			       <h3>Amount:</h3>
+			       <p class="payment-amount"> £102.00 <span class="font-xsmall">every 6 months</span></p>
+
+
+			<!-- <details>
+			 <summary><span class="summary font-xsmall">When will payments be taken</span></summary>
+				  <div class="panel panel-border-narrow">
+				    <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. All other payments will be taken on the first day of each month a payment is due.</p>
+				  </div>
+				</details> -->
 			</div>
 		</div>
 </div>
