--- a/app/views/driving-pages/direct-debit-payment-yearly-2.html
+++ b/app/views/driving-pages/direct-debit-payment-yearly-2.html
@@ -27,7 +27,7 @@
 		      </tr>
 		      <tr>
 		       <td>Sort code:</td>
-		        <td class="table-info">400500</td>
+		        <td class="table-info">40 05 00</td>
 		      </tr>
 		      <tr>
 		        <td>Account number:</td>
@@ -37,7 +37,7 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘VehicleTax’</span> will appear on your bank statement</p>
+				<p><span class="bold-small">‘MRN147877’</span> will appear on your bank statement</p>
 		</div>
 
 			<div class="form-group">
@@ -53,7 +53,7 @@
 				<h2>Payment summary</h2>
 			      <p class="payment-info">Vehicle Tax – paid yearly</p>
 			       <h3>Amount:</h3>
-			       <p class="payment-amount"> £300.00 <span class="font-xsmall">per year</span></p>
+			       <p class="payment-amount"> £204.00 <span class="font-xsmall">per year</span></p>
 			       <div>
 			       	<!-- <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. Following payments will be taken on the first day of the month a payment is due.</p> -->
 			       </div>
