refined bugs in council tax flow

--- a/app/views/borchester/borchester-council-tax-service-before.html
+++ b/app/views/borchester/borchester-council-tax-service-before.html
@@ -37,9 +37,9 @@ GOV.UK prototype kit
 			  </table>
 		</div>
 
-    <div class="panel panel-border-wide">
-      <p class="heading-small">Your account is currently in arrears.</p> 
-      <p>Set up a Direct Debit and payments will be made automatically using the plan of your choice.</p>
+    <div class="panel panel-border-wide" style="margin-top:30px;">
+      <p class="heading-small">Your account is currently in arrears for February 2018.</p> 
+      <p>Set up a Direct Debit plan and payments will be made automatically using the plan of your choice.</p>
     </div>
 
 
