--- a/app/views/borchester/renew-council-tax-choose-period.html
+++ b/app/views/borchester/renew-council-tax-choose-period.html
@@ -2,7 +2,7 @@
 
 {% block page_title %}
 GOV.UK prototype kit
-{% endblock %}
+{% endblock %} 
  
 {% block content %}
  
@@ -15,7 +15,7 @@ GOV.UK prototype kit
 <div class="grid-row">
 	<div class="column-two-thirds">
 	   
-	   <form action="/pick-plan-type">
+	   <form action="/borchester-pick-plan-type">
           <div class="form-group">
             <fieldset>
              <legend>
@@ -25,18 +25,18 @@ GOV.UK prototype kit
               </legend>
 
               <div class="multiple-choice">
-		        <input id="direct-debit-payment-monthly-1" type="radio" name="radiogroup" value="direct-debit-payment-monthly-1">
-		        <label for="direct-debit-payment-monthly-1" class="heading-small">£100.00 — paid monthly <span class="form-hint">This adds up to a total fee of £1,200.00 every year</span></label>
+		        <input id="borchester-direct-debit-payment-monthly-1" type="radio" name="radiogroup" value="borchester-direct-debit-payment-monthly-1">
+		        <label for="borchester-direct-debit-payment-monthly-1" class="heading-small">£100.00 — paid monthly <span class="form-hint">This adds up to a total fee of £1,200.00 every year</span></label>
 		      </div>
 
 		      <div class="multiple-choice">
-		        <input id="direct-debit-payment-6monthly-1" type="radio" name="radiogroup" value="direct-debit-payment-6monthly-1">
-		        <label for="direct-debit-payment-6monthly-1" class="heading-small">£600.00 — paid every 6 months <span class="form-hint">This adds up to a total fee of £1,200.00 every year</span></label>
+		        <input id="borchester-direct-debit-payment-6monthly-1" type="radio" name="radiogroup" value="borchester-direct-debit-payment-6monthly-1">
+		        <label for="borchester-direct-debit-payment-6monthly-1" class="heading-small">£600.00 — paid every 6 months <span class="form-hint">This adds up to a total fee of £1,200.00 every year</span></label>
 		      </div>
 
                <div class="multiple-choice">
-		        <input id="direct-debit-payment-yearly-1" type="radio" name="radiogroup" value="direct-debit-payment-yearly-1">
-		        <label for="direct-debit-payment-yearly-1" class="heading-small">£1,200.00 — paid yearly</label>
+		        <input id="borchester-direct-debit-payment-yearly-1" type="radio" name="radiogroup" value="borchester-direct-debit-payment-yearly-1">
+		        <label for="borchester-direct-debit-payment-yearly-1" class="heading-small">£1,200.00 — paid yearly</label>
 		      </div>
        
             </fieldset>
@@ -48,7 +48,7 @@ GOV.UK prototype kit
 
 	      <div class="form-group">
 	      	     <input class="button" type="submit" value="Continue">
-	  	    <p><a href="#">Cancel</a></p>
+	  	    <p style="margin-top:30px;"><a href="borchester-council-tax">Cancel</a></p>
 	  	   </div>
         </form>
 
