--- a/app/views/driving-pages/renew-car-tax-card-summary.html
+++ b/app/views/driving-pages/renew-car-tax-card-summary.html
@@ -37,7 +37,8 @@ GOV.UK prototype kit
 			  </table>
 
 			  <a style="margin-top:30px;" class="button" href="https://products.payments.service.gov.uk/pay/4ffc2ad3e87a48899dc1940cdbd5255d" role="button">Continue to card payment</a>
-        
+
+			  <p style="margin-top:30px;"><a href="renew-car-tax-start">Cancel</a></p>
 
 	   </div>
 	    <div class="column-third">
