--- a/app/views/driving-pages/renew-car-tax-choose-period.html
+++ b/app/views/driving-pages/renew-car-tax-choose-period.html
@@ -48,7 +48,7 @@ GOV.UK prototype kit
 
 	      <div class="form-group">
 	      	     <input class="button" type="submit" value="Continue">
-	  	    <p class="cancel-link"><a href="#">Cancel</a></p>
+	  	    <p class="cancel-link"><a href="renew-car-tax-start">Cancel</a></p>
 	  	   </div>
         </form>
 
