--- a/app/views/borchester/borchester-direct-debit-confirmed-6monthly.html
+++ b/app/views/borchester/borchester-direct-debit-confirmed-6monthly.html
@@ -13,13 +13,13 @@
     <div class="column-two-thirds">
 
     	<div class="payment-confirmed">
-			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit monthly payment plan has been set up</h1>
+			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit payment plan has been set up</h1>
 			 <h2>Reference number:</h2>
 			 <p>MRN147855</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
 			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
-			<p>The first payment of £100.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account. All monthly payments after that will be taken on the first working day of the month.</p>
+			<p>The first payment of £600.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account. All monthly payments after that will be taken on the first working day of the month.</p>
 		</div>
 
 			<h2 class="heading-medium">Your payment schedule</h2>
@@ -33,51 +33,11 @@
 			    <tbody>
 			      <tr>
 			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for February</span></td>
-			        <td>£100.00</td>
+			        <td>£600.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 March 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>02 April 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>01 May 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>03 June 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>01 July 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>02 August 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>01 September 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>02 October 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>03 November 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>01 December 2018</td>
-			        <td> £100.00</td>
-			      </tr>
-			      <tr>
-			        <td>01 January 2019</td>
-			        <td> £100.00</td>
+			        <td>01 August 2018</td>
+			        <td> £600.00</td>
 			      </tr>
 			    </tbody>
 
