--- a/app/views/borchester/borchester-direct-debit-payment-6monthly-1.html
+++ b/app/views/borchester/borchester-direct-debit-payment-6monthly-1.html
@@ -83,7 +83,7 @@
 			</div>
 
 			<div class="form-group">
-		 			<a href="borchester-direct-debit-payment-monthly-2"><button class="button">Continue</button></a>
+		 			<a href="borchester-direct-debit-payment-6monthly-2"><button class="button">Continue</button></a>
 		 	</div>
 		 	<div class="back">
 					<a href="renew-council-tax-choose-payment">Cancel payment</a>
@@ -97,9 +97,9 @@
 	<div class="column-third">
 		<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Council Tax – paid monthly</p>
+			      <p class="payment-info">Council Tax – paid every 6 months</p>
 			       <h3>Amount:</h3>
-			       <p class="payment-amount"> £100.00 <span class="font-xsmall">per month</span></p>
+			       <p class="payment-amount"> £600.00</p>
 
 
 			<!-- <details>
