--- a/app/views/borchester/borchester-direct-debit-payment-6monthly-2.html
+++ b/app/views/borchester/borchester-direct-debit-payment-6monthly-2.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 <div class="back">
-		<a href="borchester-direct-debit-payment-monthly-1" class="link-back">Back</a>
+		<a href="borchester-direct-debit-payment-6monthly-1" class="link-back">Back</a>
 	</div>
 
 
@@ -41,7 +41,7 @@
 		</div>
 
 			<div class="form-group">
-			 			<a href="borchester-direct-debit-confirmed-monthly"><button class="button">Confirm payment</button></a>
+			 			<a href="borchester-direct-debit-confirmed-6monthly"><button class="button">Confirm payment</button></a>
 			 </div>
 			 <div class="back">
 					<a href="renew-council-tax-choose-payment">Cancel payment</a>
@@ -51,9 +51,9 @@
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Council Tax – paid monthly</p>
+			      <p class="payment-info">Council Tax – paid every 6 months</p>
 			       <h3>Amount:</h3>
-			       <p class="payment-amount"> £100.00 <span class="font-xsmall">per month</span></p>
+			       <p class="payment-amount"> £600.00</p>
 			</div>
 		</div>
 </div>
