--- a/app/views/borchester/borchester-council-tax-service-before.html
+++ b/app/views/borchester/borchester-council-tax-service-before.html
@@ -23,7 +23,7 @@ GOV.UK prototype kit
 			    <tbody>
             <tr>
               <td>Property address:</td>
-              <td>10 Hemberton Road, Borchester, SW4 9LG</td>
+              <td>10 Hemberton Road, Borchester, B9 9LJ</td>
             </tr>
 			      <tr>
 			        <td>Payment of:</td>
