--- a/app/views/borchester/borchester-council-tax.html
+++ b/app/views/borchester/borchester-council-tax.html
@@ -45,7 +45,7 @@
         <div class="column-full">
         <div class="form-group">
           <label class="form-label-bold" for="full-name">
-            Account reference number
+            Enter your account reference number
             <span class="form-hint">This number can be found on the letter you received</span>
             </label>
             <input class="form-control" id="full-name" name="full-name" type="text">
