--- a/app/views/borchester/borchester-direct-debit-confirmed-monthly.html
+++ b/app/views/borchester/borchester-direct-debit-confirmed-monthly.html
@@ -32,7 +32,7 @@
 			    </thead>
 			    <tbody>
 			      <tr>
-			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for February</span></td>
+			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for the arrears due in February</span></td>
 			        <td>£100.00</td>
 			      </tr>
 			      <tr>
@@ -84,7 +84,7 @@
 			  </table>
 
 			 <div class="panel panel-border-wide" style="margin-top:30px;">
-			  <p>Your Direct Debit will be automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
+			  <p>Your Direct Debit will automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
 			 </div>
 		</div>
 	</div>
