--- a/app/views/borchester/borchester-home.html
+++ b/app/views/borchester/borchester-home.html
@@ -106,11 +106,11 @@
       <h3>Recent notices</h3>
       <div class="recent-notices">
       <ul> 
-          <li><a href="/notices">Licence to put tables or chairs on the pavement. at 100-102 High Street Manchester M4 1HP</a></li>
+          <li><a href="/notices">Licence to put tables or chairs on the pavement at 100-102 High Street, Borchester, B4 1HP</a></li>
         
-          <li><a href="/notices">Licence to put tables or chairs on the pavement. at 23 Copperas Street Manchester M4 1HS</a></li>
+          <li><a href="/notices">Licence to put tables or chairs on the pavement at 23 Copperas Street, Borchester, B4 4HS</a></li>
         
-          <li><a href="/notices">Licence to put tables or chairs on the pavement. at 100-102 High Street Manchester M4 1HP</a></li>
+          <li><a href="/notices">Licence to put tables or chairs on the pavement. at 100-102 High Street, Borchester, B4 1HP</a></li>
         
       </ul>
       </div>
