--- a/app/views/borchester/renew-council-tax-choose-payment.html
+++ b/app/views/borchester/renew-council-tax-choose-payment.html
@@ -33,7 +33,7 @@ GOV.UK prototype kit
 
               <div class="multiple-choice">
 		        <input id="renew-council-tax-card-summary" type="radio" name="radiogroup" value="renew-council-tax-card-summary">
-		        <label for="renew-council-tax-card-summary" class="heading-small">Credit or debit card <span class="form-hint">Pay a one-off fee for the year – you can't use card to do recurring payments</span></label>
+		        <label for="renew-council-tax-card-summary" class="heading-small">Credit or debit card <span class="form-hint">Make a one-off payment for the year – you can't use a card to make recurring payments</span></label>
 		      </div>
 
 
