--- a/app/views/driving-pages/direct-debit-confirmed-monthly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-monthly.html
@@ -15,7 +15,7 @@
     	<div class="payment-confirmed">
 			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit monthly payment plan has been set up</h1>
 			 <h2>Reference number:</h2>
-			 <p>MRN147836</p>
+			 <p>MRN212836</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
 			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
@@ -84,7 +84,7 @@
 			  </table>
 
 			 <div class="panel panel-border-wide" style="margin-top:30px;">
-			  <p>Your Direct Debit will be automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
+			  <p>Your Direct Debit will automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
 			 </div>
 		</div>
 	</div>
