--- a/app/views/driving-pages/direct-debit-confirmed-yearly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-yearly.html
@@ -13,12 +13,12 @@
     <div class="column-two-thirds">
 
     	<div class="payment-confirmed">
-			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit yearly payment plan has been set up</h1>
+			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Your Direct Debit yearly payment plan has been set up</h1>
 			 <h2>Reference number:</h2>
-			 <p>MRN147877</p>
+			 <p>MRN212836</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
-			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
+			<p>We’ve emailed your Direct Debit details and reference number to you.</p> 
 			<p>The payment of £204.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account.</p>
 		</div>
 
@@ -44,7 +44,7 @@
 			  </table>
 
 			 <div class="panel panel-border-wide" style="margin-top:30px;">
-			  <p>Your Direct Debit will be automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
+			  <p>Your Direct Debit will automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
 			 </div>
 		</div>
 	</div>
