--- a/app/views/driving-pages/direct-debit-payment-yearly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-yearly-1.html
@@ -44,7 +44,7 @@
 
 			      <legend>
 			        <h1 class="heading-small">
-			          Are you allowed to authorise Direct Debits on this account? <span class="form-hint" style="margin-top:5px;">If it’s a joint account but you can authorise payments on your own, click ‘Yes’</span>
+			          Are you allowed to authorise Direct Debits on this account?
 			        </h1>
 			      </legend>
 
@@ -58,9 +58,11 @@
 			        <label for="example-contact-by-phone">No</label>
 			      </div>
 			      <div class="panel panel-border-narrow js-hidden" id="contact-by-phone">
-			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method. 
+			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method.</p>
 
-			        <p><a href="other-ways-to-pay">Go back and try a different payment method</a></p>
+			        <p>If it’s a joint account but you can authorise payments on your own, click ‘Yes’.</p>
+
+			        <p><a href="renew-car-tax-choose-payment">Go back and try a different payment method</a></p>
 			       <!--  <p>If more than one person is required to authorise Direct Debits on this account, we’ll need all signatories to sign a paper version of the Direct Debit mandate. We’ll give you instructions on how to do this after you complete this form.</p> -->
 			      </div>
 
@@ -78,7 +80,7 @@
     
         
 			<div class="form-group">
-				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We need this to confirm the Direct Debit with you</span>
+				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We’ll send your Direct Debit details and reference number to this address</span>
 			  	</label>
 			  	<input class="form-control" id="email-address" type="text">
 			</div>
