--- a/app/views/driving-pages/renew-car-tax-choose-payment.html
+++ b/app/views/driving-pages/renew-car-tax-choose-payment.html
@@ -33,7 +33,7 @@ GOV.UK prototype kit
 
               <div class="multiple-choice">
 		        <input id="renew-car-tax-card-summary" type="radio" name="radiogroup" value="renew-car-tax-card-summary">
-		        <label for="renew-car-tax-card-summary" class="heading-small">Credit or debit card <span class="form-hint">Pay a one-off fee for the whole year</span></label>
+		        <label for="renew-car-tax-card-summary" class="heading-small">Credit or debit card <span class="form-hint">Make a one-off payment for the whole year</span></label>
 		      </div>
        
             </fieldset>
