--- a/app/views/driving-pages/renew-car-tax-choose-period.html
+++ b/app/views/driving-pages/renew-car-tax-choose-period.html
@@ -26,12 +26,12 @@ GOV.UK prototype kit
 
               <div class="multiple-choice">
 		        <input id="direct-debit-payment-monthly-1" type="radio" name="radiogroup" value="direct-debit-payment-monthly-1">
-		        <label for="direct-debit-payment-monthly-1" class="heading-small">£17.00 — paid monthly <span class="form-hint">This adds up to a total fee of £204.00 every year</span></label>
+		        <label for="direct-debit-payment-monthly-1" class="heading-small">£17.00 — paid monthly <span class="form-hint">This adds up to a total of £204.00 every year</span></label>
 		      </div>
 
 		      <div class="multiple-choice">
 		        <input id="direct-debit-payment-6monthly-1" type="radio" name="radiogroup" value="direct-debit-payment-6monthly-1">
-		        <label for="direct-debit-payment-6monthly-1" class="heading-small">£102.00 — paid every 6 months <span class="form-hint">This adds up to a total fee of £204.00 every year</span></label>
+		        <label for="direct-debit-payment-6monthly-1" class="heading-small">£102.00 — paid every 6 months <span class="form-hint">This adds up to a total of £204.00 every year</span></label>
 		      </div>
 
                <div class="multiple-choice">
@@ -43,7 +43,7 @@ GOV.UK prototype kit
           </div> 
 
           <div class="panel panel-border-wide">
-          <p>Each plan will be automatically renewed every 12 months unless it’s cancelled by you.</p>
+          <p>Your Direct Debit will automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
           </div>      
 
 	      <div class="form-group">
