--- a/app/views/borchester/borchester-direct-debit-confirmed-yearly.html
+++ b/app/views/borchester/borchester-direct-debit-confirmed-yearly.html
@@ -44,7 +44,7 @@
 			  </table>
 
 			 <div class="panel panel-border-wide" style="margin-top:30px;">
-			  <p>Your Direct Debit will be automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
+			  <p>Your Direct Debit will automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
 			 </div>
 		</div>
 	</div>
