--- a/app/views/driving-pages/renew-car-tax-card-summary.html
+++ b/app/views/driving-pages/renew-car-tax-card-summary.html
@@ -26,7 +26,7 @@ GOV.UK prototype kit
 			    <tbody>
 			      <tr>
 			        <td>Paying for:</td>
-			        <td>Vehicle Tax for 12 months backdated to 1 February 2018. Expires 31 January 2019.</td>
+			        <td>Vehicle tax for 12 months backdated to 1 February 2018. Expires 31 January 2019.</td>
 			      </tr>
 			      <tr>
 			        <td>Amount to pay:</td>
