--- a/app/views/borchester/borchester-direct-debit-payment-6monthly-1.html
+++ b/app/views/borchester/borchester-direct-debit-payment-6monthly-1.html
@@ -45,7 +45,7 @@
 
 			      <legend>
 			        <h1 class="heading-small">
-			          Are you allowed to authorise Direct Debits on this account? <span class="form-hint" style="margin-top:5px;">If it’s a joint account but you can authorise payments on your own, click ‘Yes’</span>
+			          Are you allowed to authorise Direct Debits on this account?
 			        </h1>
 			      </legend>
 
@@ -59,9 +59,11 @@
 			        <label for="example-contact-by-phone">No</label>
 			      </div>
 			      <div class="panel panel-border-narrow js-hidden" id="contact-by-phone">
-			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method. 
+			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method.</p>
 
-			        <p><a href="other-ways-to-pay">Go back and try a different payment method</a></p>
+			        <p>If it’s a joint account but you can authorise payments on your own, click ‘Yes’.</p>
+
+			        <p><a href="renew-council-tax-choose-payment">Go back and try a different payment method</a></p>
 			       <!--  <p>If more than one person is required to authorise Direct Debits on this account, we’ll need all signatories to sign a paper version of the Direct Debit mandate. We’ll give you instructions on how to do this after you complete this form.</p> -->
 			      </div>
 
