--- a/app/views/driving-pages/direct-debit-confirmed-monthly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-monthly.html
@@ -18,7 +18,7 @@
 			 <p>MRN212836</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
-			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
+			<p>We’ve emailed your Direct Debit details and reference number to you.</p> 
 			<p>The first payment of £17.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account. All monthly payments after that will be taken on the first working day of the month.</p>
 		</div>
 
