--- a/app/views/borchester/borchester-direct-debit-confirmed-yearly.html
+++ b/app/views/borchester/borchester-direct-debit-confirmed-yearly.html
@@ -18,7 +18,7 @@
 			 <p>MRN147855</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
-			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
+			<p>We’ve emailed your Direct Debit details and reference number to you.</p> 
 			<p>The payment of £1,200.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account.</p>
 		</div>
 
@@ -32,7 +32,7 @@
 			    </thead>
 			    <tbody>
 			      <tr>
-			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for February</span></td>
+			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for the arrears due in February</span></td>
 			        <td>£1,200.00</td>
 			      </tr>
 			      <tr>
