--- a/app/views/driving-pages/direct-debit-confirmed-6monthly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-6monthly.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
     	<div class="payment-confirmed">
-			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit payment plan has been set up</h1>
+			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Your Direct Debit payment plan has been set up</h1>
 			 <h2>Reference number:</h2>
 			 <p>MRN212836</p>
 		</div>
