--- a/app/views/driving-pages/direct-debit-payment-6monthly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-6monthly-1.html
@@ -79,7 +79,7 @@
 			</form>
 
 			<div class="form-group">
-				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We need this to confirm the Direct Debit with you</span>
+				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We’ll send your Direct Debit details and reference number to this address</span>
 			  	</label>
 			  	<input class="form-control" id="email-address" type="text">
 			</div>
