- Update one off prototype pages - Remove address - Add footer

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,16 +10,24 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-xlarge">
-        Direct Debit recurring payments
+      <h1 class="heading-large">
+        Direct Debit
       </h1>
+        <h2 class="heading-medium">Recurring payments</h2>
+  			
+        <ul class="list list-bullet">
+  				<li><a href="/driving-pages/renew-car-tax-start">Vehicle Tax</a></li>
+  				<li><a href="/borchester/borchester-home">Council Tax</a></li>
+  			</ul>
 
-			<h2 class="heading-medium">Links</h2>
+      <h2 class="heading-medium">
+        <a href="/dd-payment-pages/direct-debit-payment-1">One off payments</a>
+      </h2>
+     
 
-			<ul class="list list-bullet">
-				<li><a href="/driving-pages/renew-car-tax-start">Vehicle Tax</a></li>
-				<li><a href="/borchester/borchester-home">Council Tax</a></li>
-			</ul>
+      <h2 class="heading-medium">
+        On demand payments
+      </h2>
 
 
 			</ul>
