--- a/app/views/dd-payment-pages/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages/direct-debit-payment-1.html
@@ -45,7 +45,7 @@
 
 			      <legend>
 			        <h1 class="heading-small">
-			          Are you allowed to authorise Direct Debits on this account? <span class="form-hint" style="margin-top:5px;">If it’s a joint account but you can authorise payments on your own, click ‘Yes’</span>
+			          Are you allowed to authorise Direct Debits on this account?
 			        </h1>
 			      </legend>
 
@@ -59,10 +59,11 @@
 			        <label for="example-contact-by-phone">No</label>
 			      </div>
 			      <div class="panel panel-border-narrow js-hidden" id="contact-by-phone">
-			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method. 
+			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method.</p>
 
-			        <p><a href="other-ways-to-pay">Go back and try a different payment method</a></p>
-			       <!--  <p>If more than one person is required to authorise Direct Debits on this account, we’ll need all signatories to sign a paper version of the Direct Debit mandate. We’ll give you instructions on how to do this after you complete this form.</p> -->
+			        <p>If it’s a joint account but you can authorise payments on your own, click ‘Yes’.</p>
+
+			        <p><a href="">Go back and try a different payment method</a></p>
 			      </div>
 
 			      <!-- <p><a href="">Download the paper form</a></p>
@@ -76,51 +77,15 @@
 			  </div>
 			</form>
 
-
-
-
-	 <div class="form-group">
-      <h2 class="heading-medium billing-address-label">Billing address</h2>
-      <div class="payment-type-intro">
-        <p>This is the address associated with the account</p>
-        </div>
-        <div class="form-group">
-                    <label class="form-label-bold" for="country">
-                        Country
-                    </label>
-                    <div class="dropdown">
-                        <select name="select" class="form-control dropdown-list" id="full-name">
-                            <option value="value1" selected>United Kingdom</option>
-                            <!-- <option value="value1">Other countries</option> -->
-                        </select>
-                    </div>
-            </div>
-
 			<div class="form-group">
-				<label class="form-label-bold" for="building-and-street">
-			    Building and street
-			  	</label>
-			  	<input class="form-control" id="building-and-street" type="text">
-			  	<input class="form-control" id="building-and-street" type="text">
-			</div>
-			<div class="form-group">
-				<label class="form-label-bold" for="town-or-city">
-			    Town or city
-			  	</label>
-			  	<input class="form-control" id="town-or-city" type="text">
-			</div>
-			<div class="form-group">
-				<label class="form-label-bold" for="postcode">
-			    Postcode
-			  	</label>
-			  	<input class="form-control" id="postcode" type="text">
-			</div>
-			<div class="form-group">
-				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We need this to confirm the Direct Debit with you</span>
+				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We’ll send your Direct Debit details and reference number to this address</span>
 			  	</label>
 			  	<input class="form-control" id="email-address" type="text">
 			</div>
-		</div>
+
+
+
+
 
 			<div class="form-group">
 		 			<a href="/dd-payment-pages/direct-debit-payment-2"><button class="button">Continue</button></a>
