--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -37,6 +37,14 @@
 {% endblock %}
 
 {% block footer_support_links %}
+    <ul>
+        <li>Service provided by Government Digital Service</li>
+        <li>10 Whitechapel High Street,
+            London E1 8QS United Kingdom</li><br>
+        <li class="merchant-details">Phone: 0208 000 000</li>
+        <li>Email: example@email.com</li>
+      </ul>
+
   {% if useAutoStoreData %}
     <ul>
       <li>
