--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -6,6 +6,7 @@ $path: "/public/images/";
 // Take a look in /govuk-modules/_govuk-elements.scss to see which files are imported.
 @import 'govuk-elements';
 
+
 // Take a look at in app/assets/sass/patterns/ to see which files are imported.
 @import 'patterns/check-your-answers';
 @import 'patterns/task-list';
@@ -31,6 +32,7 @@ $path: "/public/images/";
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
 @import 'paymentpage';
+@import 'fake-tachyons';
 
 .cancel-link {
   margin-top: 20px;
