--- a/app/views/driving-pages/direct-debit-confirmed-6monthly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-6monthly.html
@@ -17,7 +17,7 @@
 			 <h2>Reference number:</h2>
 			 <p>MRN212836</p>
 		</div>
-		<div class="email-copy" style="margin-top:30px;">
+		<div class="email-copy mt4">
 			<p>We’ve emailed your Direct Debit details and reference number to you.</p> 
 			<p>The first payment of £102.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account. All payments after that will be taken on the first working day of the month a payment is due.</p>
 		</div>
