Change payment description to example for demos

--- a/app/views/dd-payment-pages/direct-debit-confirmed.html
+++ b/app/views/dd-payment-pages/direct-debit-confirmed.html
@@ -16,7 +16,7 @@
 			 <h2>Reference number:</h2>
 			 <p>147836</p>
 		</div>
-			<h2 class="heading-small">We’ve emailed you a payment receipt. Your permit will arrive by post in the next 5 working days.</h2>
+			<p class="mt5">We’ve emailed you a payment receipt. Your permit will arrive by post in the next 5 working days.</p>
 			<table>
 			    <thead>
 			      <tr>
@@ -26,7 +26,7 @@
 			    <tbody>
 			      <tr>
 			        <td>Payment for:</td>
-			        <td>Lock and Weir Fishing Permit – River Thames</td>
+			        <td>Example payment description</td>
 			      </tr>
 			      <tr>
 			        <td>Total amount:</td>
@@ -38,10 +38,10 @@
 		</div>
 		</div>
 
-
+<!-- 
 	 <div class="form-group" style="margin-top: 30px;">
 			 <a href="#"><button class="button">Finish</button></a>
-	</div>
+	</div> -->
 
 
 
