--- a/app/views/dd-payment-pages/direct-debit-payment-2.html
+++ b/app/views/dd-payment-pages/direct-debit-payment-2.html
@@ -51,7 +51,7 @@
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Lock and Weir Fishing Permit – River Thames</p>
+			      <p class="payment-info">Example payment description</p>
 			      <h3>Total amount:</h3>
 			      <p class="payment-amount"> £31.00</p>
 			</div>
