--- a/app/views/driving-pages/direct-debit-payment-yearly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-yearly-1.html
@@ -16,7 +16,7 @@
    <div class="column-two-thirds">
   	<h1 class="heading-large">Set up a Direct Debit</h1>
 
-	<form class="form" method="POST" action="/dd-payment-pages/direct-debit-payment-2">
+	<form class="form" method="POST" action="/dd-oneoff/direct-debit-payment-2">
 		  	<div class="form-group">
 				<label class="form-label-bold" for="name-on-account">
 			    Name on the account
@@ -80,7 +80,7 @@
     
         
 			<div class="form-group">
-				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We’ll send your Direct Debit details and reference number to this address</span>
+				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We’ll send your Direct Debit details and Mandate reference number to this address</span>
 			  	</label>
 			  	<input class="form-control" id="email-address" type="text">
 			</div>
