--- a/app/views/driving-pages/card-confirmed-yearly.html
+++ b/app/views/driving-pages/card-confirmed-yearly.html
@@ -14,7 +14,7 @@
 
     	<div class="payment-confirmed">
 			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Payment successful</h1>
-			 <h2>Reference number:</h2>
+			 <h2>Mandate reference number:</h2>
 			 <p>CT147877</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
