Update naming to be clear about one off DD

--- a/app/views/dd-oneoff/direct-debit-confirmed.html
+++ b/app/views/dd-oneoff/direct-debit-confirmed.html
@@ -13,7 +13,7 @@
     		<div class="column-two-thirds">
     		<div class="payment-confirmed">
 			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit payment successful</h1>
-			 <h2>Reference number:</h2>
+			 <h2>Mandate reference number:</h2>
 			 <p>147836</p>
 		</div>
 			<p class="mt5">We’ve emailed you a payment receipt. Your permit will arrive by post in the next 5 working days.</p>
