--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,7 +26,7 @@
      
 
       <h2 class="heading-medium">
-        On demand payments
+        <a href="/dd-ondemand/direct-debit-payment-1">On demand payments</a>
       </h2>
 
 
