Add Dart Charge service for lab day

--- a/app/views/dd-ondemand/direct-debit-confirmed.html
+++ b/app/views/dd-ondemand/direct-debit-confirmed.html
@@ -16,7 +16,7 @@
 			 <h2>Mandate reference number:</h2>
 			 <p>147836</p>
 		</div>
-			<p class="mt5">We’ve emailed you a payment receipt. Your permit will arrive by post in the next 5 working days.</p>
+			<p class="mt5">We’ve emailed you a confirmation with your mandate reference number.</p>
 			<table>
 			    <thead>
 			      <tr>
@@ -26,11 +26,11 @@
 			    <tbody>
 			      <tr>
 			        <td>Payment for:</td>
-			        <td>Example payment description</td>
+			        <td>Direct debit for Dartford Crossing</td>
 			      </tr>
 			      <tr>
 			        <td>Total amount:</td>
-			        <td> £31.00</td>
+			        <td>Variable</td>
 			      </tr>
 			    </tbody>
 
