--- a/app/views/dd-ondemand/apply-start.html
+++ b/app/views/dd-ondemand/apply-start.html
@@ -10,22 +10,32 @@
 
 <div class="grid-row">
    <div class="column-two-thirds">
-  	<h1 class="heading-large">Apply for a Lock and Weir Fishing Permit for the River Thames</h1>
-
-			<h2 class="heading-medium">Before you start</h2>
-			<p>This permit allows for the use of up to two rods and lines when fishing for all freshwater fish except for salmon.</p>
-			<p>The permit is not transferable and The Environment Agency reserves the right to
-			suspend or cancel a permit.</p>
+  	<h1 class="heading-large">Use Direct Debit to pay the Dartford Crossing charge (Dart Charge)</h1>
+			
+			<p>[Copy here from Mark explaining how it works.]</p>
+			<p>They set up an open mandate, every month a variable amount is taken based on how many times they used the Dartford Crossing</p>
 
 			<div class="panel panel-border-wide">
-				<p>Permit cost: <br> <span class="heading-xlarge">£31</span></p>
-				<p>or <span class="bold-small">free for those under 16.</span></p>
-				<p>Payments are taken via Direct Debit.</p>
+				<p>Price per crossing: <br> <span class="heading-xlarge">£2.50</span></p>	
 			</div>
 
-		<div class="form-group" style="margin-top:30px">
-			<a class="button button-start" href="apply-user-details" role="button">Start now</a>		 
-		</div>
+      <p>Payments are taken via Direct Debit on the 1st of every month.</p>
+  		
+      <div class="form-group mt3">
+  			<a class="button button-start" href="apply-details" role="button">Start now</a>		 
+  		</div>
+
+       <h2 class="heading-medium">Before you start</h2>
+
+        <p>To pay using a one-off Direct Debit payment you’ll need to have the following bank details ready:</p>
+        
+        <ul class="list-bullet">
+          <li>Account number</li>
+          <li>Sort code</li>
+          <li>Name on account</li>
+        </ul>
+
+        <p class="mt4">If more than one person is required to authorise Direct Debits on the bank account you can't proceed with this online payment method. You should use a <a href="#">different payment method</a>.</p>
 	</div>	 	
 </div>
 
