--- a/app/views/dd-ondemand/direct-debit-payment-2.html
+++ b/app/views/dd-ondemand/direct-debit-payment-2.html
@@ -37,7 +37,7 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘Thames-Fishing-Permit’</span> will appear on your bank statement</p>
+				<p><span class="bold-small">‘Dartford Charge Crossing’</span> will appear on your bank statement</p>
 		</div>
 
 			<div class="form-group">
@@ -51,9 +51,9 @@
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Example payment description</p>
-			      <!-- <h3>Total amount:</h3>
-			      <p class="payment-amount"> £31.00</p> -->
+			      <p class="payment-info">Dartford Charge Crossing</p>
+			      <p class="payment-amount mb0"> £2.50</p> 
+			      <span>x number of crossings</span>
 			</div>
 		</div>
 </div>
