Update form label

--- a/app/views/dd-ondemand/apply-details.html
+++ b/app/views/dd-ondemand/apply-details.html
@@ -26,7 +26,7 @@
 		
 				<div class="form-group">
 					<label class="form-label-bold" for="vehicle-registration">
-				    Town or city <span class="form-hint">Be careful not to mix up the letter ‘I’ and ‘O’ with the numbers ‘I’ and ‘O’.</span>
+				    Vehicle registration<span class="form-hint">Be careful not to mix up the letter ‘I’ and ‘O’ with the numbers ‘I’ and ‘O’.</span>
 				  	</label>
 				  	<input class="form-control" id="town-or-city" type="text">
 				</div>
