Remove reference to payment from confirmation page

--- a/app/views/dd-ondemand/direct-debit-confirmed.html
+++ b/app/views/dd-ondemand/direct-debit-confirmed.html
@@ -12,11 +12,11 @@
 		<div class="grid-row">
     		<div class="column-two-thirds">
     		<div class="payment-confirmed">
-			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit payment successful</h1>
+			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit setup successful</h1>
 			 <h2>Mandate reference number:</h2>
 			 <p>147836</p>
 		</div>
-			<p class="mt5">We’ve emailed you a confirmation with your mandate reference number.</p>
+			<p class="mt5">We will email you a confirmation with your mandate reference number.</p>
 			<table>
 			    <thead>
 			      <tr>
