Change payment summary box to show no amount

--- a/app/views/dd-ondemand/direct-debit-payment-1.html
+++ b/app/views/dd-ondemand/direct-debit-payment-1.html
@@ -15,8 +15,8 @@
 <div class="grid-row">
 	<div class="column-two-thirds">
 		<h1 class="heading-large">Set up a Direct Debit</h1>
-		<!-- 	<p>We will set up a mandate </p> -->
-
+<!-- 			<p>We will notify you by email 3 days before each future payment.</p>
+ -->
 			<form class="form" method="POST" action="/dd-oneoff/direct-debit-payment-2">
 		  	<div class="form-group">
 				<label class="form-label-bold" for="name-on-account">
@@ -99,8 +99,9 @@
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
 			      <p class="payment-info">Dartford Charge Crossing</p>
-			      <p class="payment-amount mb0"> £2.50</p> 
-			      <span>x number of crossings</span>
+			      <h3>Total amount:</h3>
+			      <p class="payment-info mv0">Variable</p> 
+			      
 			</div>
 	</div>
 </div>
