--- a/app/views/dd-ondemand/direct-debit-payment-2.html
+++ b/app/views/dd-ondemand/direct-debit-payment-2.html
@@ -37,7 +37,8 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘Dartford Charge Crossing’</span> will appear on your bank statement</p>
+				<p>We will notify you by email 3 days before each future payment. 
+</p>
 		</div>
 
 			<div class="form-group">
@@ -52,8 +53,9 @@
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
 			      <p class="payment-info">Dartford Charge Crossing</p>
-			      <p class="payment-amount mb0"> £2.50</p> 
-			      <span>x number of crossings</span>
+			      <h3>Total amount:</h3>
+			      <p class="payment-info mv0">Variable</p> 
+			      
 			</div>
 		</div>
 </div>
