Fix indentation in code

--- a/app/views/dd-ondemand/direct-debit-payment-2.html
+++ b/app/views/dd-ondemand/direct-debit-payment-2.html
@@ -37,8 +37,7 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p>We will notify you by email 3 days before each future payment. 
-</p>
+				<p>We will notify you by email 3 days before each future payment.</p>
 		</div>
 
 			<div class="form-group">
