Change ondemand to variable

--- a/app/views/dd-variable/direct-debit-confirmed.html
+++ b/app/views/dd-variable/direct-debit-confirmed.html
@@ -16,7 +16,7 @@
 			 <h2>Mandate reference number:</h2>
 			 <p>147836</p>
 		</div>
-			<p class="mt5">We will email you a confirmation with your mandate reference number.</p>
+			<p class="mt5">We will email you a confirmation with your mandate reference number. You will be notified by email 3 days before each future payment.</p>
 			<table>
 			    <thead>
 			      <tr>
@@ -30,7 +30,7 @@
 			      </tr>
 			      <tr>
 			        <td>Total amount:</td>
-			        <td>Variable</td>
+			        <td>£2.50 for each journey, collected monthly</td>
 			      </tr>
 			    </tbody>
 
