--- a/app/views/dd-variable/direct-debit-payment-1.html
+++ b/app/views/dd-variable/direct-debit-payment-1.html
@@ -83,7 +83,7 @@
 				</div>
 
 				<div class="form-group">
-			 			<a href="/dd-ondemand/direct-debit-payment-2"><button class="button">Continue</button></a>
+			 			<a href="direct-debit-payment-2"><button class="button">Continue</button></a>
 			 	</div>
 			 	<div class="back">
 						<a href="apply-start">Cancel payment</a>
@@ -98,9 +98,9 @@
 
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Dartford Charge Crossing</p>
+			      <p class="payment-info">Dartford Charge crossing</p>
 			      <h3>Total amount:</h3>
-			      <p class="payment-info mv0">Variable</p> 
+			      <p class="payment-info mv0">£2.50 for each journey, collected monthly</p> 
 			      
 			</div>
 	</div>
