--- a/app/views/dd-variable/direct-debit-payment-2.html
+++ b/app/views/dd-variable/direct-debit-payment-2.html
@@ -51,9 +51,9 @@
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Dartford Charge Crossing</p>
+			      <p class="payment-info">Dartford Charge crossing</p>
 			      <h3>Total amount:</h3>
-			      <p class="payment-info mv0">Variable</p> 
+			      <p class="payment-info mv0">£2.50 for each journey, collected monthly</p> 
 			      
 			</div>
 		</div>
